# testing-ml

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
.github/workflows/: tests.yml
src/data_prep/: categorical.py  continuous.py  prep_titanic.py
src/tree/: decision_tree.py  random_forest.py
src/utils/: logger.py  timer.py
tests/data_prep/: test_categorical.py  test_continuous.py  test_prep_titanic.py
tests/tree/: fixtures.py  test_decision_tree.py  test_decision_tree_1pre.py  test_decision_tree_2post.py  test_decision_tree_3eval.py  test_fixtures.py  test_random_forest.py  test_random_forest_1pre.py  test_random_forest_2post.py  test_random_forest_3eval.py
