[tool.poetry]
name = "testing-ml"
version = "0.1.0"
description = ""
authors = ["eugeneyan <eugeneyanziyou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
pandas = "^1.1.1"
scikit-learn = "^0.23.2"
pytest = "^6.0.1"
mypy = "^0.782"
pylint = "^2.6.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
